streamlit app added

--- a/notebook/classifcation.ipynb
+++ b/notebook/classifcation.ipynb
@@ -874,6 +874,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['France', 'Germany', 'Spain'], dtype=object)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "onehot_encoder_geo.categories_[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -1446,6 +1466,26 @@
     "label_encoder_gender=LabelEncoder()\n",
     "data['Gender']=label_encoder_gender.fit_transform(data['Gender'])\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Female', 'Male'], dtype=object)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_encoder_gender.classes_"
    ]
   },
   {
